--- a/index.html
+++ b/index.html
@@ -3,9 +3,70 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Sheikh Kiron</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <section class="hero">
+    <div class="first">
+      <h3>Hello I'm</h3>
+      <h1>Sheikh Kiron</h1>
+      <p>a passionate Full Stack Developer with expertise in HTML, CSS, JavaScript, PHP, and WordPress. I specialize in
+      converting Figma/PSD designs to pixel-perfect HTML and building dynamic, responsive websites.</p>
+      <a href="https://www.fiverr.com/webexpert_kiron/" target="_blank">Hire Me</a>
+    </div>
+    <div class="first">
+      <img src="./image/p-1.PNG" alt="">
+    </div>
+  </section>
+
+  <section class="main">
+    <div class="sec">
+      <img src="./image/bg-1.PNG" alt="">
+    </div>
+    <div class="sec">
+      <h1>Biography</h1>
+      <p>Passionate and detail-oriented Full-Stack Web Developer with expertise in HTML, CSS,
+      JavaScript, PHP, Wordpress and modern front-end frameworks. Experienced in designing
+      responsive websites and converting Figma/PSD designs into pixel-perfect web pages. Adept at
+      building dynamic and user-friendly web applications with strong problem-solving skills.</p>
+      <a href="">Download Cv</a>
+    </div>
+  </section>
+
   
+  <section class="wo">
+    <h1>My latest work</h1>
+  <div class="wm">
+    <div class="work">
+      <img src="./image/work-1.png" alt="">
+    </div>
+    <div class="work">
+      <img src="./image/work-2.jpg" alt="">
+    </div>
+    <div class="work">
+      <img src="./image/work-3.jpg" alt="">
+    </div>
+    </div>
+  </section>
+
+  <section class="cr">
+    <h1>What Client are say</h1>
+    <h3>SM Fayez</h3>
+    <h4>CEO, Tech Felance</h4>
+    <q>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Consequuntur illum accusantium aspernatur odio omnis natus quidem.
+    </q>
+    <div class="loca">
+      <h5>Leave me a message in the</h5>
+      <a href="mailto:sheikhkiron59@gmail.com">
+        sheikhkiron59@gmail.com
+      </a>
+    </div>
+  </section>
+
+  <footer>
+    All Right Reserved By SHEIKH KIRON
+  </footer>
 </body>
 </html>
